--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ locale                   : "ko"
 title                    : "민석이의 C 프로그래밍"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "larmes0507"
+name                     : "강민석"
 description              : "시스템 프로그램을 위한 C언어"
-url                      : "https://larmes0507.github.io/"
+url                      : "https://larmes0507.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
