--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "강민석"
 description              : "시스템 프로그램을 위한 C언어"
 url                      : "https://larmes0507.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "mmistakes/minimal-mistakes"
+repository               : "larmes0507/larmes0507.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
