--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "sunrise"
 
 # Site Settings
 locale                   : "ko"
-title                    : "민석이의 C 프로그래밍"
+title                    : "세상의 화학 이야기"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "강민석"
-description              : "시스템 프로그램을 위한 C언어"
+description              : "우리 생활과 밀접한 화학, 화학은 도처에 "
 url                      : "https://larmes0507.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "larmes0507/larmes0507.github.io"
