--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "강민석"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "우리의 지적 호기심을 위한 "
+  bio              : "모든 것은 호기심으로부터"
   location         : "대한민국, 서울"
   email            : "scottsky0507@naver.com"
   links:
