--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "강민석"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "세상의 화학 "
+  bio              : "세상의 화학 이야기"
   location         : "대한민국, 서울"
   email            : "scottsky0507@naver.com"
   links:
