--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://larmes0507.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "larmes0507/larmes0507.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/기텁 사진 png.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
